# Computer_Architecture_Project_2

./: .gitignore  CMakeLists.txt  InstDataBin.cpp  InstDataBin.h  InstDataStr.cpp  InstDataStr.h  InstDecoder.cpp  InstDecoder.h  InstEnum.h  InstErrorDetector.cpp  InstErrorDetector.h  InstImageReader.cpp  InstImageReader.h  InstLookUp.cpp  InstLookUp.h  InstMemory.cpp  InstMemory.h  InstPipelineData.cpp  InstPipelineData.h  InstSimulator.cpp  InstSimulator.h  InstType.h  InstUtility.cpp  InstUtility.h  README.md  main.cpp  makefile  pipeline
